--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "pokesite",
+  "homepage": "https://grzegorz-jodlowski.github.io/pokemon/",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "clsx": "^1.1.1",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4",
-    "node-sass": "^4.14.1",
-    "clsx": "^1.1.1"
+    "web-vitals": "^0.2.4"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
